force-app/main/default/objects/MPExitClauses__c/MPExitClauses__c.object-meta.xml
<CustomObject>
    <description>Objeto que guarda la información sobre las clausulas de salida de una oportunidad y de un contrato</description>
    <label>Cláusula de Salida</label>
    <nameField>
        <displayFormat>CLA-{0000}</displayFormat>
        <label>N Cláusula</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cláusulas de Salida</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>