force-app/main/default/objects/MPExitClauses__c/fields/MPApplicationMonth__c.field-meta.xml
<CustomField>
    <fullName>MPApplicationMonth__c</fullName>
    <description>Indica el número de mes en particular donde se hará efectiva la salida o partir de qué mes podrá aplicar la cláusula de salida Mallplaza con previo aviso</description>
    <inlineHelpText>Indica el número de mes en particular donde se hará efectiva la salida o partir de qué mes podrá aplicar la cláusula de salida Mallplaza con previo aviso</inlineHelpText>
    <label>Mes de aplicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPMonths</valueSetName>
    </valueSet>
</CustomField>