force-app/main/default/objects/MPExitClauses__c/fields/MPApplicationMonthInWords__c.field-meta.xml
<CustomField>
    <fullName>MPApplicationMonthInWords__c</fullName>
    <formula>CASE(TEXT(MPApplicationMonth__c),
  &apos;1&apos;, &apos;Uno&apos;,
  &apos;2&apos;, &apos;Dos&apos;,
  &apos;3&apos;, &apos;Tres&apos;,
  &apos;4&apos;, &apos;Cuatro&apos;,
  &apos;5&apos;, &apos;Cinco&apos;,
  &apos;6&apos;, &apos;Seis&apos;,
  &apos;7&apos;, &apos;Siete&apos;,
  &apos;8&apos;, &apos;Ocho&apos;,
  &apos;9&apos;, &apos;Nueve&apos;,
  &apos;10&apos;, &apos;Diez&apos;,
  &apos;11&apos;, &apos;Once&apos;,
  &apos;12&apos;, &apos;Doce&apos;,
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes de aplicación en palabras</label>
    <type>Text</type>
</CustomField>