force-app/main/default/objects/MPExitClauses__c/fields/MPNoticeMonth__c.field-meta.xml
<CustomField>
    <fullName>MPNoticeMonth__c</fullName>
    <description>Indica el número de mes en que la parte que desea aplicar la cláusula de salida, debe notificar a la otra, para que formalmente se dé por enterada para que se pueda ejecutar la cláusula en el mes de aplicación</description>
    <inlineHelpText>Indica el número de mes en que la parte que desea aplicar la cláusula de salida, debe notificar a la otra, para que formalmente se dé por enterada para que se pueda ejecutar la cláusula en el mes de aplicación</inlineHelpText>
    <label>Mes de aviso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPMonths</valueSetName>
    </valueSet>
</CustomField>