force-app/main/default/objects/MPExitClauses__c/fields/MPOpportunity__c.field-meta.xml
<CustomField>
    <fullName>MPOpportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cláusulas de Salida</relationshipLabel>
    <relationshipName>Clausula_de_Salida</relationshipName>
    <type>Lookup</type>
</CustomField>