force-app/main/default/objects/MPExitClauses__c/fields/MPOrder__c.field-meta.xml
<CustomField>
    <fullName>MPOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cláusulas de Salida</relationshipLabel>
    <relationshipName>Clausulas_de_Salida</relationshipName>
    <type>Lookup</type>
</CustomField>