force-app/main/default/objects/MPExitClauses__c/fields/MPPenaltiesCount__c.field-meta.xml
<CustomField>
    <fullName>MPPenaltiesCount__c</fullName>
    <description>Indica el número de rentas a pagar a la otra parte</description>
    <inlineHelpText>Indica el número de rentas a pagar a la otra parte</inlineHelpText>
    <label>Cantidad de penalidades</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>