force-app/main/default/objects/MPExitClauses__c/fields/MPSpecialExitClause__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialExitClause__c</fullName>
    <label>Cláusula salida especial</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>