force-app/main/default/objects/MPExitClauses__c/fields/MPTypeOfClause__c.field-meta.xml
<CustomField>
    <fullName>MPTypeOfClause__c</fullName>
    <label>Tipo de Cláusula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bilateral sin penalidad</fullName>
            </value>
            <value>
                <fullName>Bilateral con pago de penalidad</fullName>
            </value>
            <value>
                <fullName>A favor de Mallplaza</fullName>
            </value>
            <value>
                <fullName>A favor del Socio comercial</fullName>
            </value>
            <value>
                <fullName>A FAVOR ARRENDATARIO</fullName>
                <isActive>false</isActive>
                <label>A FAVOR ARRENDATARIO</label>
            </value>
            <value>
                <fullName>A FAVOR MALLPLAZA</fullName>
                <isActive>false</isActive>
                <label>A FAVOR MALLPLAZA</label>
            </value>
            <value>
                <fullName>BILATERAL</fullName>
                <isActive>false</isActive>
                <label>BILATERAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>