force-app/main/default/objects/MPExitClauses__c/recordTypes/MPOppExitClause.recordType-meta.xml
<RecordType>
    <fullName>MPOppExitClause</fullName>
    <active>true</active>
    <description>Tipo de registro usado para las clausulas de salida asociadas a la Oportunidad</description>
    <label>Clausula Salida Oportunidad</label>
</RecordType>