force-app/main/default/objects/MPExitClauses__c/recordTypes/MPOrderExitClause.recordType-meta.xml
<RecordType>
    <fullName>MPOrderExitClause</fullName>
    <active>true</active>
    <description>Tipo de registro usado para las clausulas de salida asociadas a el Pedido</description>
    <label>Clausula Salida Pedido</label>
</RecordType>