force-app/main/default/objects/MPExitClauses__c/validationRules/VREXC_006_MPExitClauseControl.validationRule-meta.xml
<ValidationRule>
    <fullName>VREXC_006_MPExitClauseControl</fullName>
    <active>true</active>
    <errorConditionFormula>!($Profile.Name = &quot;System Administrator&quot;) &amp;&amp;
!($Profile.Name = &quot;Administrador del sistema&quot;) &amp;&amp;

ISCHANGED( OwnerId ) &amp;&amp;

 RecordType.DeveloperName = &quot;MPOrderExitClause&quot;</errorConditionFormula>
    <errorMessage>No puedes modificar este registro (VREXC_006)</errorMessage>
</ValidationRule>