force-app/main/default/objects/MPExitClauses__c/validationRules/VROC_001_MPOppClausesCreateEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>VROC_001_MPOppClausesCreateEdit</fullName>
    <active>true</active>
    <description>Regla de validación que impide crear y modificar claúsulas en la oportunidad cuando la misma no esté en &apos;Negociación&apos;.</description>
    <errorConditionFormula>AND(
OR(
MPOpportunity__r.RecordType.DeveloperName  = &apos;MPEntry&apos;,
MPOpportunity__r.RecordType.DeveloperName  = &apos;MPRenovation&apos;
),
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;
)
),
OR(
NOT($Permission.MPCreateEditOpptyClauses),
NOT(ISPICKVAL(MPOpportunity__r.StageName, &apos;Cotización&apos;))
)
)</errorConditionFormula>
    <errorMessage>Las cláusulas pueden ser creadas y modificadas únicamente por el Jefe Comercial en etapa de Negociación. (VROC_001)</errorMessage>
</ValidationRule>