force-app/main/default/objects/MPExitClauses__c/validationRules/VROC_002_MPOppClausesApplicationMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>VROC_002_MPOppClausesApplicationMonth</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( TEXT(MPTypeOfClause__c ))) &amp;&amp;
ISBLANK( TEXT(MPApplicationMonth__c ))</errorConditionFormula>
    <errorDisplayField>MPApplicationMonth__c</errorDisplayField>
    <errorMessage>Por favor selecciona el Mes de aplicación. (VROC_002)</errorMessage>
</ValidationRule>