force-app/main/default/objects/MPExitClauses__c/validationRules/VROC_003_MPOppClausesNoticeMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>VROC_003_MPOppClausesNoticeMonth</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( TEXT(MPTypeOfClause__c ))) &amp;&amp;
ISBLANK( TEXT( MPNoticeMonth__c  ))</errorConditionFormula>
    <errorDisplayField>MPNoticeMonth__c</errorDisplayField>
    <errorMessage>Por favor selecciona el Mes de aviso. (VROC_003)</errorMessage>
</ValidationRule>