force-app/main/default/objects/MPExitClauses__c/validationRules/VROC_004_MPOppClausesPenaltiesCount.validationRule-meta.xml
<ValidationRule>
    <fullName>VROC_004_MPOppClausesPenaltiesCount</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( MPTypeOfClause__c) = &quot;Bilateral con pago de penalidad&quot;

&amp;&amp;

ISNULL( MPPenaltiesCount__c )</errorConditionFormula>
    <errorDisplayField>MPPenaltiesCount__c</errorDisplayField>
    <errorMessage>Por favor selecciona la Cantidad de penalidades. (VROC_004)</errorMessage>
</ValidationRule>