force-app/main/default/objects/MPExitClauses__c/validationRules/VROC_005_MPOppClausesMainClause.validationRule-meta.xml
<ValidationRule>
    <fullName>VROC_005_MPOppClausesMainClause</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

  AND(!ISBLANK( TEXT(MPTypeOfClause__c )), !ISBLANK(MPSpecialExitClause__c)),

  AND(ISBLANK(TEXT(MPTypeOfClause__c)), ISBLANK(MPSpecialExitClause__c))

)</errorConditionFormula>
    <errorMessage>Por favor seleccione un &quot;Tipo de Clausula&quot; o ingrese una &quot;Clausula salida especial&quot;. (VROC_005)</errorMessage>
</ValidationRule>